--- a/src/pages/Login/style.less
+++ b/src/pages/Login/style.less
@@ -4,22 +4,22 @@
     position: absolute;
     background: url("../../assets/images/login.jpg") center no-repeat;
     background-size: 100% 100%;
-}
-.login .login_box_card {
-    width: 450px;
-    margin: 15% auto;
-}
-.login .login_box_card .box_card {
-    border-radius: 20px;
-}
-.login .login_box_card .box_card .ant-card-head-title {
-    font-size: 25px;
-    text-align: center;
-}
-.login .login_box_card .box_card img {
-    width: 25px;
-    height: 25px;
-    animation: loading 3s linear infinite;
+    .login_box_card {
+        width: 450px;
+        margin: 15% auto;
+        .box_card img {
+            width: 25px;
+            height: 25px;
+            animation: loading 3s linear infinite;
+        }
+        .box_card {
+            border-radius: 20px;
+            .ant-card-head-title {
+                font-size: 25px;
+                text-align: center;
+            }
+        }
+    }
 }
 @keyframes loading {
     /*以百分比来规定改变发生的时间 也可以通过"from"和"to",等价于0% 和 100%*/
