--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,6 +1,3 @@
-html {
-  height: 100%;
-}
 body {
   font-size: 14px;
   color: #333;
@@ -8,19 +5,33 @@ body {
   background: #FFF;
 }
 
-#root {
-  height: 100%;
+#app {
+  height: 100vh;
+
   header {
     height: 70px;
-    background: pink;
+    background: #FFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+
+    img {
+      height: 100%;
+    }
   }
-  .home-content{
-    height: calc(100% - 140px);
-    background: pink;
+
+  .nav_sider {
+    height: 100%;
   }
+
   footer {
     height: 70px;
     background: #F7F9FE;
     color: #333333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
+
