--- a/src/pages/Login/style1.less
+++ b/src/pages/Login/style1.less
@@ -2,7 +2,8 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    //background: url("../../assets/images/login.jpg") center no-repeat;
+    //background: url("../../assets/images/login-bg.svg") center no-repeat;
+    background-image: url("../../assets/images/login-bg.svg");
     background-size: 100% 100%;
     .login_box_card {
         width: 450px;
