--- a/src/pages/Login/style.less
+++ b/src/pages/Login/style.less
@@ -37,7 +37,8 @@
             height: 100vh;
             .content-right {
                 height: 100vh;
-                padding-top: 46%;
+                padding-top: 15%;
+                position: absolute;
                 .container-right-form {
                     width: 400px;
                     margin-left: 200px;
