增加退出按钮

--- a/src/style.less
+++ b/src/style.less
@@ -14,9 +14,16 @@
     height: calc(100% - 70px);
     background: #F7F9FE;
     .menu {
+      height: calc(100% - 70px);
       ul {
         border-right-color: #F7F9FE;
       }
+    }
+    .user{
+      width: 100%;
+      height: 57px;
+      padding: 16px;
+      border-top: 1px solid #CBD5EE;
     }
   }
 
