--- a/src/pages/Students/style.less
+++ b/src/pages/Students/style.less
@@ -1,3 +1,13 @@
 .home-table {
   height: calc(100vh - 120px);
 }
+.search-area {
+  display: flex;
+  width: 300px;
+  height: 72px;
+  align-items: center;
+  margin-left: calc(100% - 300px);
+}
+.ant-table-content {
+  height: calc( 100vh - 300px);
+}
