style(room):room样式

--- a/src/pages/Room/style.less
+++ b/src/pages/Room/style.less
@@ -1,10 +1,8 @@
-.search-area {
-  display: flex;
-  width: 300px;
-  height: 72px;
-  align-items: center;
-  margin-left: calc(100% - 300px);
-}
-.ant-table-content {
-  height: calc( 100vh - 300px);
+.room-area {
+  .room-search-area {
+    display: flex;
+    height: 72px;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
